# node-sqlserver-v8

./: .binding.gyp.un~  .clang-format  .clang-tidy  .clangd  .env  .env-cmdrc  .eslintrc  .eslintrc.cjs  .eslintrc.js  .gitignore  .mocharc.js  .mocharc.json  .npmignore  .package.json.un~  .prebuildrc  CMakeLists.txt  Docker  DriverModuleTest.js  DriverModuleTest.js.map  DriverModuleTest.ts  IMPLEMENTATION_NOTES.md  README.md  ROADMAP.md  STATE_TRACKING_IMPLEMENTATION.md  appveyor.txt  appveyor.yml  b.txt  bcp.fmt  binding.gyp  binding.gyp.dont-build  binding.gyp~  bindingdotgyp.old  build-config.js  build.bat  build_all.bat  build_ia32.bat  build_x64.bat  busy-connection.js  compile_commands.json  demo-support.js  (+25 more)
.devcontainer/: Dockerfile.dev  build-config.js  docker-compose.yml
build-test/: CMakeCache.txt
cpp/: CMakeLists.txt  Connection.cpp  Connection.h  CriticalSection.h  Logger.cpp  Logger.h  OdbcError.h  binding.cpp  build.ps1  column_buffer.h  datum_storage.h  iodbc_api.h  js_object_mapper.cpp  js_object_mapper.h  js_time_adapter.h  js_time_utils.h  module.cpp  odbc_api.cpp  odbc_api.h  odbc_common.h  odbc_connection.cpp  odbc_connection.h  odbc_connection_factory.cpp  odbc_connection_factory.h  odbc_driver_types.h  odbc_environment.cpp  odbc_environment.h  odbc_error.h  odbc_error_handler.cpp  odbc_error_handler.h  odbc_handles.h  odbc_query_executor.cpp  odbc_query_executor.h  odbc_statement.cpp  odbc_statement.h  odbc_statement_factory.cpp  odbc_statement_factory.h  parameter_factory.cpp  parameter_set.h  platform.h  (+12 more)
cpp/include/common/: id_factory.h  numeric_utils.h  odbc_common.h  odbc_constants.h  platform.h  string_utils.h  time_utils.h
cpp/include/core/: bound_datum.h  bound_datum_helper.h  bound_datum_set.h  column_buffer.h  datum_storage.h  query_parameter.h  query_result.h  result.h  result_buffer.h
cpp/include/js/: Connection.h  bcp_column_data.h  bcp_wrapper.h  js_object_mapper.h  js_param.h  js_state_notifier.h  js_time_adapter.h  js_time_utils.h  napi_wrapper.h
cpp/include/js/columns/: big_int_column.h  binary_column.h  bool_column.h  char_column.h  column.h  column_set.h  int_column.h  null_column.h  number_column.h  result_set.h  string_column.h  timestamp_column.h
cpp/include/js/workers/: begin_transaction_worker.h  bind_query_worker.h  cancel_worker.h  close_worker.h  commit_worker.h  fetch_rows_worker.h  next_result_worker.h  odbc_async_worker.h  open_worker.h  prepare_worker.h  query_worker.h  release_worker.h  rollback_worker.h  unbind_worker.h  worker_base.h
cpp/include/odbc/: OdbcError.h  bcp.h  bcp_executor.h  bcp_plugin.h  bcp_storage.h  connection_handles.h  iodbc_api.h  odbc_connection.h  odbc_connection_factory.h  odbc_driver_types.h  odbc_environment.h  odbc_error.h  odbc_error_handler.h  odbc_handles.h  odbc_query_executor.h  odbc_row.h  odbc_state_notifier.h  odbc_statement.h  odbc_statement_cache.h  odbc_statement_factory.h  odbc_statement_legacy.h  odbc_string_utils.h  odbc_transaction_manager.h  odbc_type_mapper.h  parameter_factory.h  parameter_set.h  safe_handle.h  sqlncli-linux.h  sqlncli.h
cpp/include/utils/: CriticalSection.h  Logger.h  connection_handles.h  logger_performance.h
cpp/mocks/: mock_odbc_row.h
cpp/src/common/: numeric_utils.cpp  string_utils.cpp  time_utils.cpp
cpp/src/core/: bound_datum.cpp  bound_datum_set.cpp  datum_storage.cpp  query_parameter.cpp  query_result.cpp
cpp/src/js/: Connection.cpp  bcp_wrapper.cpp  js_object_mapper.cpp  js_time_adapter.cpp
cpp/src/js/columns/: binary_column.cpp  column.cpp  result_set.cpp  timestamp_column.cpp
cpp/src/js/workers/: begin_transaction_worker.cpp  bind_query_worker.cpp  close_worker.cpp  commit_worker.cpp  fetch_rows_worker.cpp  next_result_worker.cpp  next_result_worker.h  odbc_async_worker.cpp  open_worker.cpp  prepare_worker.cpp  query_worker.cpp  release_worker.cpp  rollback_worker.cpp
cpp/src/odbc/: bcp.cpp  bcp_executor.cpp  bcp_plugin.cpp  bcp_storage.cpp  connection_handles.cpp  odbc_api.cpp  odbc_connection.cpp  odbc_connection.cpp.patch  odbc_connection_factory.cpp  odbc_environment.cpp  odbc_error_handler.cpp  odbc_handles.cpp  odbc_prepared_statement.cpp  odbc_query_executor.cpp  odbc_row.cpp  odbc_statement.cpp  odbc_statement_cache.cpp  odbc_statement_factory.cpp  odbc_statement_legacy.cpp  odbc_string_utils.cpp  odbc_transaction_manager.cpp  odbc_transient_statement.cpp  odbc_tvp_statement.cpp  odbc_type_mapper.cpp  parameter_factory.cpp  parameter_set.cpp
cpp/src/utils/: Logger.cpp
docs/: building-from-source.md  pool-efficient-strategy.md
examples/: logging-example.js  logging-example.ts  logging-performance.js  simple-logging-config.js  state-tracking-example.js  stress-test-race-condition.js
lib/: ConnectionWrapper.js  DriverModuleTest.js  DriverModuleTest.js.map  DriverModuleTest.ts  MsNodeSqWrapperModule.js  MsNodeSqWrapperModule.js.map  MsNodeSqWrapperModule.ts  MsNodeSqlDriverApiModule.js  base-promises.js  (+48 more)
test/cpp/: CMakeLists.txt  MOCK_STATEMENT_USAGE.md  create_parameter_object.cpp  datum_storage_test.cpp  js_time_adapter_tests.cpp  mock_napi.cpp  mock_odbc_api.h  mock_odbc_statement.h  odbc_connection_test.cpp  odbc_handle_test.cpp  odbc_statement_test.cpp  test_main.cpp
test/cpp/examples/: mock_statement_integration_example.cpp
test/cpp/fixtures/include/: odbc_statement_fixture.h
test/cpp/fixtures/src/: odbc_statement_fixture.cpp
test/cpp/helpers/include/: test_data_builder.h  test_helper_exports.h  test_utils.h
test/cpp/helpers/src/: test_data_builder.cpp  test_utils.cpp
test/cpp/mocks/: README.md
test/cpp/mocks/include/: mock_napi.h  mock_odbc_api.h  mock_odbc_statement.h
test/cpp/mocks/src/: mock_js_object_mapper.cpp  mock_napi.cpp
test/cpp/unit/: datum_storage_test.cpp  js_time_adapter_tests.cpp  mock_odbc_statement_basic_test.cpp  mock_odbc_statement_fixtures.cpp  mock_odbc_statement_simple_test.cpp  mock_odbc_statement_test.cpp  object_properties_test.cpp  odbc_connection_test.cpp  odbc_handle_test.cpp  odbc_handle_test.h  odbc_statement_test.cpp  parameter_test.cpp  time_util_tests.cpp
(+427 files in other folders)
